# shared-expense-tracker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  categories.json  config.example.json  design-summary.md  pyproject.toml  requirements.txt  设计总结.md
api/: index.py
launchd/: com.shared-expense-tracker.questionnaire-reminder.plist
scripts/: bot.py  form_server.py  keychain.py  ledger.py  ledger_handler.py  parser.py  remind_questionnaire.py  reminders.py  report.py  system_mode.py
templates/: index.html  questionnaire.html  submitted.html
