[project]
name = "shared-expense-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "flask>=3.1.3",
    "httpx[socks]>=0.28.1",
    "keyring>=25.7.0",
    "lark-oapi>=1.6.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
]
